# BED_plam

./: Dockerfile  pyproject.toml
plagiarism/: Makefile  manage.py
plagiarism/api/: serializers.py  urls.py  views.py
plagiarism/api/algorithm/: comparsion_algo.py  constants.py  downloaders.py  extract_keywords.py  imports.py  processing_pipeline.py  search.py  stop_words_ukrainian.json  text_preprocessors.py  vectorizer.pkl
plagiarism/plagiarism/: asgi.py  settings.py  urls.py  wsgi.py
